// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly when checked 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      },
    ]
  }
>
  <Icon
    color="#F56522"
    id="checkboxMark"
  />
  <PeachText
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        {
          "color": "#F56522",
        },
      ]
    }
  >
    21 Million
  </PeachText>
</TouchableOpacity>
`;

exports[`Checkbox renders correctly when unchecked 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      },
    ]
  }
>
  <Icon
    color="#9F8C82"
    id="square"
  />
  <PeachText
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        {
          "color": "#BAADA7",
        },
      ]
    }
  >
    21 Million
  </PeachText>
</TouchableOpacity>
`;
